--- a/.github/workflows/6main.yml
+++ b/.github/workflows/6main.yml
@@ -1,83 +1,95 @@
-name: 🏗️ Build OTX Server  
-on: [push, pull_request]  
-  
-jobs:  
-  build:  
-    runs-on: windows-latest  
-    steps:  
+name: 🚀 xBuild OTX Server      
+on: [push, pull_request]      
+      
+jobs:      
+  build:      
+    runs-on: windows-latest      
+    steps:      
       - name: 📥 Checkout Code  
-        uses: actions/checkout@v4  
-          
-      - name: 📊 Build Status  
-        run: echo "::notice title=Build Started::🚀 Starting OTX Server build process"  
-          
-      - name: 🚀 Cache Boost  
-        uses: actions/cache@v4  
-        id: cache-boost  
-        with:  
-          path: |  
-            C:\ProgramData\chocolatey\lib\boost-msvc-14.3  
-            C:\local\boost_1_84_0  
-          key: boost-1.84.0-msvc-14.3-${{ runner.os }}  
+        uses: actions/checkout@v4      
             
-      - name: 📦 Install Boost via Chocolatey  
-        if: steps.cache-boost.outputs.cache-hit != 'true'  
-        run: |  
-          echo "::group::📦 Installing Boost"  
-          choco install boost-msvc-14.3 --version=1.84.0 -y  
-          $localPath = 'C:\local'  
-          $boostPath = 'C:\local\boost_1_84_0'  
-          $targetPath = 'C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools'  
-          if (!(Test-Path $localPath)) { New-Item -ItemType Directory -Path $localPath }  
-          if (!(Test-Path $boostPath)) {  
-            New-Item -ItemType SymbolicLink -Path $boostPath -Target $targetPath  
-          }  
-          echo "::endgroup::"  
-        shell: powershell  
-          
-      - name: 🔗 Create Boost symlink (if cached)  
-        if: steps.cache-boost.outputs.cache-hit == 'true'  
-        run: |  
-          echo "::notice::📦 Using cached Boost libraries"  
-          $localPath = 'C:\local'  
-          $boostPath = 'C:\local\boost_1_84_0'  
-          $targetPath = 'C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools'  
-          if (!(Test-Path $localPath)) { New-Item -ItemType Directory -Path $localPath }  
-          if (!(Test-Path $boostPath)) {  
-            New-Item -ItemType SymbolicLink -Path $boostPath -Target $targetPath  
-          }  
-        shell: powershell  
+      - name: 🗂️ Cache Boost      
+        uses: actions/cache@v4      
+        id: cache-boost      
+        with:      
+          path: |      
+            C:\ProgramData\chocolatey\lib\boost-msvc-14.3      
+            C:\local\boost_1_84_0      
+          key: boost-1.84.0-msvc-14.3-${{ runner.os }}      
+              
+      - name: 📦 Install Boost     
+        if: steps.cache-boost.outputs.cache-hit != 'true'      
+        run: |      
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8  
+          Write-Host "🔄 Installing Boost libraries..."  
+          choco install boost-msvc-14.3 --version=1.84.0 -y      
+          if (!(Test-Path "C:\local")) { New-Item -ItemType Directory -Path "C:\local" }      
+          if (!(Test-Path "C:\local\boost_1_84_0")) {      
+            New-Item -ItemType SymbolicLink -Path "C:\local\boost_1_84_0" -Target "C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools"      
+          }      
+          Write-Host "✅ Boost installation completed!"  
+        shell: powershell      
             
-      - name: 🗂️ Cache MSBuild objects  
-        uses: actions/cache@v4  
-        with:  
-          path: |  
-            sources/msvc/x64  
-            sources/msvc/*.tlog  
-          key: msbuild-cache-${{ runner.os }}-${{ hashFiles('sources/**/*.cpp', 'sources/**/*.h') }}  
-          restore-keys: |  
-            msbuild-cache-${{ runner.os }}-  
-                
-      - name: 🔧 Setup MSBuild  
-        uses: microsoft/setup-msbuild@v2  
-            
-      - name: 🏗️ Build OTX Server  
+      - name: 🔗 Create Boost Symlink      
+        if: steps.cache-boost.outputs.cache-hit == 'true'      
+        run: |      
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8  
+          Write-Host "♻️ Using cached Boost libraries..."  
+          if (!(Test-Path "C:\local")) { New-Item -ItemType Directory -Path "C:\local" }      
+          if (!(Test-Path "C:\local\boost_1_84_0")) {      
+            New-Item -ItemType SymbolicLink -Path "C:\local\boost_1_84_0" -Target "C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools"      
+          }      
+          Write-Host "✅ Boost symlink created!"  
+        shell: powershell      
+              
+      - name: 💾 Cache MSBuild Objects      
+        uses: actions/cache@v4      
+        with:      
+          path: |      
+            sources/msvc/x64      
+            sources/msvc/*.tlog      
+          key: msbuild-cache-${{ runner.os }}-${{ hashFiles('sources/**/*.cpp', 'sources/**/*.h') }}      
+          restore-keys: |      
+            msbuild-cache-${{ runner.os }}-      
+                  
+      - name: 🔧 Setup MSBuild      
+        uses: microsoft/setup-msbuild@v2      
+              
+      - name: 🏗️ Build OTX Server      
         run: |  
-          echo "::group::🏗️ Building OTX Server"  
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8  
+          Write-Host "🚀 Starting OTX Server compilation..."  
           msbuild sources/msvc/TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /m  
-          echo "::endgroup::"  
+          Write-Host "✅ Build completed successfully!"  
         shell: powershell  
-            
-      - name: ⬆️ Upload Build Artifact  
-        uses: actions/upload-artifact@v4  
-        with:  
-          name: 🎯-otx-server-build  
-          path: sources/msvc/x64/Release/  
-            
-      - name: ✅ Build Success  
+    
+      - name: 📋 Prepare Artifacts    
+        run: |    
+          echo 📦 Preparing build artifacts...  
+          mkdir artifact-staging    
+          copy sources\msvc\x64\Release\*.exe artifact-staging\    
+          echo ✅ Artifacts prepared!  
+        shell: cmd    
+              
+      - name: ⬆️ Upload Artifact      
+        uses: actions/upload-artifact@v4      
+        with:      
+          name: 🎯 otx-server-build      
+          path: artifact-staging/  
+  
+      - name: 🎉 Build Success Notification  
         if: success()  
-        run: echo "::notice title=Success::🎉 OTX Server build completed successfully!"  
-          
-      - name: ❌ Build Failure  
+        run: |  
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8  
+          Write-Host "🎊 SUCCESS! OTX Server build completed successfully!"  
+          Write-Host "📁 Artifact: otx-server-build"  
+          Write-Host "🔗 Download your build from the Actions tab"  
+        shell: powershell  
+  
+      - name: ❌ Build Failure Notification    
         if: failure()  
-        run: echo "::error title=Failed::💥 Build failed. Check the logs above for details."
+        run: |  
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8  
+          Write-Host "💥 BUILD FAILED! Please check the logs above for errors."  
+          Write-Host "🔍 Common issues: Missing dependencies, compilation errors"  
+        shell: powershell
